# yamllint-plugin-example

./: MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/yamllint_plugin_example/: __init__.py  flow_mapping.py  flow_sequence.py  override_comments.py
tests/: common.py  test_override_comments.py  test_plugin.sh
tests/res/override_comments/ng/: dot.yamllint
tests/res/override_comments/ok/: 0.yml  dot.yamllint
