# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[metadata]
name = yamllint_plugin_example
version = 0.1.0
description = YAML Lint plugin rule example
project_urls =
    Bug Tracker = https://github.com/ssato/yamllint-plugin-example/issues
    Source = https://github.com/ssato/yamllint-plugin-example

long_description = file: README.rst
author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = GPLv3+
url = https://github.com/ssato/yamllint-plugin-example
platforms =
    any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
packages = find:
package_dir =
    = src
install_requires =
    yamllint

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
yamllint.plugins =
    example = yamllint_plugin_example

# vim:sw=4:ts=4:et:
